<?xml version="1.0"?>
<package>

  <name>nav2d_tutorials</name>
  <version>0.4.1</version>
  <description>
    Contains a set of tutorials that run 2D-Navigation within Stage-Simulator.
  </description>
  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/nav2d_tutorials</url>
  <author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>nav2d_msgs</run_depend>
  <run_depend>nav2d_operator</run_depend>
  <run_depend>nav2d_navigator</run_depend>
  <run_depend>nav2d_localizer</run_depend>
  <run_depend>nav2d_remote</run_depend>
  <run_depend>nav2d_karto</run_depend>
  <run_depend>nav2d_exploration</run_depend>

</package>
