<?xml version="1.0"?>
<package>
  <name>navigation_2d</name>
  <version>0.0.0</version>
  <description>Dummy package</description>
  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license> 
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
